force-app/main/default/objects/oc_eol__PricebookEntry__c/oc_eol__PricebookEntry__c.object-meta.xml
<CustomObject>
    <label>PricebookEntry</label>
    <nameField>
        <label>PricebookEntry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PricebookEntry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>