force-app/main/default/objects/oc_eol__PricebookEntry__c/fields/oc_eol__IsActive__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>