force-app/main/default/objects/oc_eol__PricebookEntry__c/fields/oc_eol__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__Product2Id__c</fullName>
    <label>Product2Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>