force-app/main/default/objects/oc_eol__PricebookEntry__c/fields/oc_eol__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__ProductCode__c</fullName>
    <label>ProductCode</label>
    <type>TextArea</type>
</CustomField>