force-app/main/default/objects/oc_eol__PricebookEntry__c/fields/oc_eol__UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>