force-app/main/default/objects/oc_eol__PricebookEntry__c/fields/oc_eol__UseStandardPrice__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__UseStandardPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseStandardPrice</label>
    <type>Checkbox</type>
</CustomField>